--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "express": "~3.3.4",
     "jade": "~0.34.0",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "mongojs": "~0.13.0",
+    "bcrypt": "~0.7.8"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
