--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "~3.3.4",
-    "jade": "~0.34.0",
-    "socket.io": "~0.9.16",
+    "express": "~4.4.0",
+    "jade": "~1.3.1",
+    "socket.io": "~1.0.3",
     "mongojs": "~0.13.0",
-    "bcrypt": "~0.7.8"
+    "bcrypt": "~0.7.8",
+    "serve-favicon": "~2.0.0",
+    "morgan": "~1.1.1",
+    "body-parser": "~1.3.0",
+    "method-override": "~2.0.0",
+    "errorhandler": "~1.0.1"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-develop": "~0.2.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "request": "~2.27.0",
-    "time-grunt": "~0.1.1",
-    "load-grunt-tasks": "~0.2.0"
+    "grunt": "~0.4.5",
+    "grunt-develop": "~0.4.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "request": "~2.36.0",
+    "time-grunt": "~0.3.1",
+    "load-grunt-tasks": "~0.4.0"
   }
 }
